[tool.poetry]
name = "cartography"
version = "0.1.0"
description = "Telegram bot to solve cartography issues"
authors = ["likeinlife <likeinlife48@yandex.ru>"]
readme = "README.md"
packages = [{include = "cartography"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"
tabulate = "^0.9.0"
python-dotenv = "^1.0.0"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
pynvim = "^0.4.3"
mypy = "^1.0.1"
isort = "^5.12.0"
rope = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "cartography.__main__:main"
