[project]
name = "src"
version = "0.1.0"
description = "Telegram bot to solve cartography issues"
authors = [{ name = "likeinlife", email = "likeinlife48@yandex.ru" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiogram==3.4.1",
    "tabulate>=0.9.0,<0.10",
    "python-dotenv>=1.0.0,<2",
    "pillow==12.1.1",
    "pydantic-settings>=2.1.0,<3",
    "dishka>=1.7.2,<2",
    "structlog>=24.1.0,<25",
]

[dependency-groups]
dev = [
    "mypy>=1.0.1,<2",
    "ruff==0.15.2",
    "pre-commit>=3.6.0,<4",
    "types-pillow>=10.2.0.20240213,<11",
]
test = [
    "pytest>=8.0.0,<9",
    "coverage>=7.4.1,<8",
    "pytest-cov>=4.1.0,<5",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.ruff]
line-length = 120
select = ["D", "B", "S", "A", "C4", "T10", "F", "Q"]
ignore = [
    "D100",
    "D107",
    "D101",
    "D106",
    "D103",
    "D104",
    "D102",
    "D105",
    "D203",
    "D212",
    "D407",
    "D417",
    "B008",
    "B904",
    "A003",
]
exclude = ["__init__.py"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.coverage.run]
omit = [
    "*/micrometr/*",
    "*/tg_bot/*",
    "*/cartography/image_drawer/*",
    "*/cartography/Image_generator/*",
    "*/facades/*",
    "src/*.py",
    "models.py",
    "__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
pythonpath = "src"
